# tripo3d-rs

./: .gitignore  Cargo.toml  README.md  prek.toml
.github/workflows/: ci.yml  docs.yml  lint.yml  release-drafter.yml  release.yml
crates/tripo-api/: Cargo.toml  README.md
crates/tripo-api/src/: client.rs  compress.rs  download.rs  enums.rs  envelope.rs  error.rs  image.rs  lib.rs  retry.rs  types.rs  upload.rs  versions.rs  wait.rs
crates/tripo-api/src/tasks/: check_riggable.rs  convert_model.rs  image_to_model.rs  mesh_completion.rs  mesh_segmentation.rs  mod.rs  multiview_to_model.rs  refine_model.rs  retarget_animation.rs  rig_model.rs  smart_lowpoly.rs  stylize_model.rs  text_to_model.rs  texture_model.rs
crates/tripo-api/tests/: client_http.rs  polling.rs  retry.rs  schemas.rs  wire_format.rs
crates/tripo-api/tests/snapshots/: wire_format__convert_model_fbx_with_preset.snap  wire_format__convert_model_minimal_gltf.snap  wire_format__image_to_model_file_token.snap  wire_format__image_to_model_url.snap  wire_format__mesh_completion_with_parts.snap  wire_format__multiview_to_model_with_empty_slot.snap  wire_format__rig_model_with_spec.snap  wire_format__smart_lowpoly_uses_highpoly_to_lowpoly_wire_name.snap  wire_format__stylize_model_voxel.snap  wire_format__text_to_model_full.snap  wire_format__texture_model_no_prompt.snap  wire_format__texture_model_with_text_and_style_image.snap
crates/tripo-cli/: Cargo.toml  README.md
crates/tripo-cli/src/: cleanup.rs  cli.rs  exit.rs  main.rs  output.rs  progress.rs  resolve.rs  signals.rs
crates/tripo-cli/src/commands/: balance.rs  completions.rs  mod.rs  task.rs  upload.rs
crates/tripo-cli/src/commands/variants/: check_riggable.rs  convert_model.rs  image_to_model.rs  mesh_completion.rs  mesh_segmentation.rs  mod.rs  multiview_to_model.rs  parsers.rs  refine_model.rs  retarget_animation.rs  rig_model.rs  smart_lowpoly.rs  stylize_model.rs  text_to_model.rs  texture_model.rs
crates/tripo-cli/tests/: balance.rs  help.rs  task.rs  upload.rs  variants.rs
crates/tripo-cli/tests/snapshots/: help__help_root.snap  help__help_task.snap  help__help_text_to_model.snap
crates/tripo-mcp/: Cargo.toml  README.md
crates/tripo-mcp/src/: lib.rs  main.rs  params.rs  server.rs
crates/tripo-mcp/src/tools/: mod.rs
crates/tripo-mcp/tests/: inprocess.rs  tool_list.rs
crates/tripo-mcp/tests/common/: mod.rs
crates/tripo-mcp/tests/snapshots/: tool_list__tool_list_critical.snap  tool_list__tool_list_names.snap
