[workspace]
resolver = "2"
members  = ["crates/tripo-api", "crates/tripo-cli"]

[workspace.package]
edition      = "2024"
rust-version = "1.95"
license      = "MIT"
repository   = "https://github.com/pavlov-net/tripo3d-cli"
homepage     = "https://github.com/pavlov-net/tripo3d-cli"

[workspace.dependencies]
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "2"
tracing       = "0.1"
url           = { version = "2", features = ["serde"] }
uuid          = { version = "1", features = ["v4", "serde"] }
bytes         = "1"
futures       = "0.3"
reqwest       = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli", "json", "multipart", "stream", "http2"] }
schemars      = { version = "1", features = ["uuid1", "url2"] }
clap               = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete      = "4"
anyhow             = "1"
indicatif          = "0.18"
is-terminal        = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# dev
wiremock      = "0.6"
insta         = { version = "1", features = ["json"] }
tempfile      = "3"
tokio-test    = "0.4"
assert_cmd         = "2"
predicates         = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
