[package]
name        = "tripo-mcp"
version     = "0.1.2"
description = "Unofficial Model Context Protocol server for the Tripo 3D Generation API"
keywords    = ["tripo", "3d", "mcp", "claude"]
categories  = ["command-line-utilities"]
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
homepage    = { workspace = true }
publish     = false

[lib]
name = "tripo_mcp"
path = "src/lib.rs"

[[bin]]
name = "tripo-mcp"
path = "src/main.rs"

[dependencies]
tripo-api          = { path = "../tripo-api", features = ["schemars"] }
rmcp               = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
schemars           = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["rt-multi-thread", "macros"] }
rmcp     = { workspace = true, features = ["client"] }

[lints]
workspace = true
